// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutcomeIconSet render render all zero 1`] = `
<div
  className="outcome-icon-set"
  title="0 passed, 0 incomplete, 0 failed"
>
  <span
    className="screen-reader-only"
  >
    0 passed, 0 incomplete, 0 failed
  </span>
</div>
`;

exports[`OutcomeIconSet render render incomplete zero 1`] = `
<div
  className="outcome-icon-set"
  title="3 passed, 0 incomplete, 4 failed"
>
  <span
    className="outcome-icon outcome-icon-pass"
  >
    <OutcomeIcon
      outcomeType="pass"
    />
  </span>
  <span
    className="outcome-icon outcome-icon-pass"
  >
    <OutcomeIcon
      outcomeType="pass"
    />
  </span>
  <span
    className="outcome-icon outcome-icon-pass"
  >
    <OutcomeIcon
      outcomeType="pass"
    />
  </span>
  <span
    className="outcome-icon outcome-icon-fail"
  >
    <OutcomeIcon
      outcomeType="fail"
    />
  </span>
  <span
    className="outcome-icon outcome-icon-fail"
  >
    <OutcomeIcon
      outcomeType="fail"
    />
  </span>
  <span
    className="outcome-icon outcome-icon-fail"
  >
    <OutcomeIcon
      outcomeType="fail"
    />
  </span>
  <span
    className="outcome-icon outcome-icon-fail"
  >
    <OutcomeIcon
      outcomeType="fail"
    />
  </span>
  <span
    className="screen-reader-only"
  >
    3 passed, 0 incomplete, 4 failed
  </span>
</div>
`;

exports[`OutcomeIconSet render render with all properties 1`] = `
<div
  className="outcome-icon-set"
  title="3 passed, 2 incomplete, 4 failed"
>
  <span
    className="outcome-icon outcome-icon-pass"
  >
    <OutcomeIcon
      outcomeType="pass"
    />
  </span>
  <span
    className="outcome-icon outcome-icon-pass"
  >
    <OutcomeIcon
      outcomeType="pass"
    />
  </span>
  <span
    className="outcome-icon outcome-icon-pass"
  >
    <OutcomeIcon
      outcomeType="pass"
    />
  </span>
  <span
    className="outcome-icon outcome-icon-incomplete"
  >
    <OutcomeIcon
      outcomeType="incomplete"
    />
  </span>
  <span
    className="outcome-icon outcome-icon-incomplete"
  >
    <OutcomeIcon
      outcomeType="incomplete"
    />
  </span>
  <span
    className="outcome-icon outcome-icon-fail"
  >
    <OutcomeIcon
      outcomeType="fail"
    />
  </span>
  <span
    className="outcome-icon outcome-icon-fail"
  >
    <OutcomeIcon
      outcomeType="fail"
    />
  </span>
  <span
    className="outcome-icon outcome-icon-fail"
  >
    <OutcomeIcon
      outcomeType="fail"
    />
  </span>
  <span
    className="outcome-icon outcome-icon-fail"
  >
    <OutcomeIcon
      outcomeType="fail"
    />
  </span>
  <span
    className="screen-reader-only"
  >
    3 passed, 2 incomplete, 4 failed
  </span>
</div>
`;
